<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/rest_icon"
        android:title="@string/title_home"
        app:showAsAction="ifRoom"
        android:enabled="true"/>

    <item
        android:id="@+id/navigation_posts"
        android:icon="@drawable/ic_view_list_black_48dp"
        android:title="@string/title_posts"
        app:showAsAction="ifRoom"
        android:enabled="true"/>

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings"
        android:title="@string/title_settings"
        app:showAsAction="ifRoom"
        android:enabled="true"/>


</menu>
